--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = "0.8.1"
+winit = "0.27.5"
+wgpu = "0.14.0"
+env_logger = "0.9.1"
+log = "0.4.17"
+pollster = "0.2.5"
