--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ env_logger = "0.9.1"
 log = "0.4.17"
 pollster = "0.2.5"
 bytemuck = { version = "1.4", features = [ "derive" ] }
+rand = "0.8.5"
+anymap = "0.12.1"
+
