--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ pollster = "0.2.5"
 bytemuck = { version = "1.4", features = [ "derive" ] }
 rand = "0.8.5"
 anymap = "0.12.1"
+hashbrown = "0.14.2"
 
