--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ rand = "0.8.5"
 anymap = "0.12.1"
 hashbrown = "0.14.2"
 
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png"]
+
