--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "0.27.5"
-wgpu = "0.14.0"
-env_logger = "0.9.1"
+winit = { version = "0.29.9", features = ["rwh_05"]}
+wgpu = "0.18.0"
+env_logger = "0.10.1"
 log = "0.4.17"
-pollster = "0.2.5"
+pollster = "0.3.0"
 bytemuck = { version = "1.4", features = [ "derive" ] }
 rand = "0.8.5"
 anymap = "0.12.1"
 hashbrown = "0.14.2"
+glam = { version = "^0.25.0", features = ["bytemuck", "rand", "serde"] }
 
 [dependencies.image]
 version = "0.24"
