--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = { version = "0.29.9", features = ["rwh_05"]}
+winit = { version = "0.29.9", features = ["rwh_05"] }
 wgpu = "0.18.0"
 env_logger = "0.10.1"
 log = "0.4.17"
 pollster = "0.3.0"
-bytemuck = { version = "1.4", features = [ "derive" ] }
+bytemuck = { version = "1.4", features = ["derive"] }
 rand = "0.8.5"
-anymap = "0.12.1"
 hashbrown = "0.14.2"
 glam = { version = "^0.25.0", features = ["bytemuck", "rand", "serde"] }
+zerocopy = { version = "0.7.32", features = ["derive"] }
+itertools = "0.12.1"
 
 [dependencies.image]
 version = "0.24"
 default-features = false
 features = ["png"]
-
